--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.mepride.musicflow"
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -61,20 +61,19 @@ dependencies {
     implementation 'com.gyf.immersionbar:immersionbar:2.3.3-beta15'
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.0.0'
-    //StarrySkyJava
-    //    implementation 'com.lzx:StarrySkyJava:2.0.4'
-    //    implementation 'com.android.support:palette-v7:28.0.0'
+    //progressbar
     implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
+
     implementation 'com.github.kabouzeid:app-theme-helper:1.3.7'
     //litepal
     implementation 'org.litepal.android:java:3.0.0'
     //loadingView
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
-
+    //加密类 还没调用
     implementation files('libs/wekaSTRIPPED.jar')
-
-    implementation 'org.greenrobot:eventbus:3.1.1'
-
+    //eventbus
+//    implementation 'org.greenrobot:eventbus:3.1.1'
+    //guidview
     implementation "agency.tango.android:material-intro-screen:0.0.5"
 
 
